--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/OurAgendaServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.postgresql-9.4.1211.jre6.jar=/Users/fbeneditovm/JarLib/JDBC_PostgreSQL/postgresql-9.4.1211.jre6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.postgresql-9.4.1211.jre6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
